Fixed cropped 'y' in "sort by activity"

--- a/static/scss/courses/discussion.scss
+++ b/static/scss/courses/discussion.scss
@@ -17,6 +17,7 @@
       margin: 0;
       padding: 0;
       height: auto;
+      line-height: normal;
     }
 
     input {
